unpackaged/objects/Orders_Related_to_CFE__c.object
<CustomObject>
  <description>Object making it possible to relate multiple Orders to a CFE. As standard functionality you cannot relate any object to Activities. This is a workaround to that.</description>
  <fields>
    <fullName>Activeted_Order_Amount__c</fullName>
    <label>Activated Order Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Amount_of_Order_in_the_Approval_Process__c</fullName>
    <label>Amount of Order in the Approval Process</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Number_of_Activated_Orders__c</fullName>
    <label>Number of Activated Orders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Number_of_Orders_in_the_Approval_Process__c</fullName>
    <label>Number of Orders in the Approval Process</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Numbers_of_Created_Orders__c</fullName>
    <label>Number of Created Orders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Numbers_of_Deleted_Orders__c</fullName>
    <label>Number of Deleted Orders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Orders Related to CFE</label>
  <listViews>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <label>Orders Related to CFEs Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Orders Related to CFE</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>